[package]
name = "address"
version = "0.0.0"
description = "This library aids in processing network addresses."
readme = "README.md"
repository = "https://github.com/nikdeapen/address"
homepage = "https://github.com/nikdeapen/address"
authors = ["Nik Deapen <nik@deapen.com>"]
edition = "2021"
license = "MIT"
