[package]
name = "simple-file-cache"
version = "0.0.0"
description = "This library implements a simple file cache."
readme = "README.md"
repository = "https://github.com/nikdeapen/simple-file-cache"
homepage = "https://github.com/nikdeapen/simple-file-cache"
authors = ["Nik Deapen <nik@deapen.com>"]
edition = "2021"
license = "MIT"

[dependencies]
file-storage = { git = "https://github.com/nikdeapen/file-storage", features = ["local"] }
enc = { git = "https://github.com/nikdeapen/enc", features = ["hex"] }
sha2 = "0.10.8"
